@@ -82,8 +82,6 @@ License; for more information, see @ref{Library Copying}.
 
 * Functions::          Available functions, macros, and global variables.
 
-* Obstacks::           Object Stacks.
-
 * Licenses::           The various licenses under which libiberty sources are
                        distributed.
 
@@ -245,7 +243,11 @@ central location from which to use, maintain, and distribute them.
 
 @c This is generated from the glibc manual using a make-obstacks-texi.sh
 @c script of Phil's.  Hope it's accurate.
+@lowersections
+@lowersections
 @include obstacks.texi
+@raisesections
+@raisesections
 
 @node Functions
 @chapter Function, Variable, and Macro Listing.
